--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -1,6 +1,6 @@
 # https://help.github.com/en/categories/automating-your-workflow-with-github-actions
 
-name: "coding style"
+name: "lint"
 
 on:
   pull_request:
@@ -11,7 +11,7 @@ on:
 
 jobs:
   cs:
-    name: "code style"
+    name: "typescript"
     runs-on: ubuntu-latest
 
     steps:
