--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tecsafe-app-js-sdk",
+  "name": "@tecsafe/app-js-sdk",
   "version": "1.0.0",
   "description": "Provides a Plugin to integrate the TECSAFE App into a Shopware 6 Shop.",
   "main": "src/index.mts",
