--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -1,21 +1,51 @@
-name: Publish Package to npmjs
+name: Publish to package registries
+
 on:
   release:
-    types: [published]
+    types: [created]
+
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v3
+      # Environment setup
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Setup Node
+        uses: actions/setup-node@v2
         with:
-          node-version: "18.x"
-          registry-url: "https://registry.npmjs.org"
-      - run: npm ci
-      - run: git config --global user.name "GitHub CD bot"
-      - run: git config --global user.email "ci@tecsafe.de"
-      - run: npm version ${{ github.event.release.tag_name }}
-      - run: npm run build
-      - run: npm publish --access public
+          node-version: '20.x'
+          registry-url: 'https://registry.npmjs.org'
+      
+      # Install dependencies
+      - name: Install pnpm
+        run: npm i -g pnpm
+      - name: Install dependencies with pnpm
+        run: pnpm install
+
+      # Build and test
+      - name: Build
+        run: pnpm build
+
+      - name: Test
+        run: pnpm test
+
+      # Update Documentation
+      - name: Generate Documentation
+        run: pnpm doc
+
+      - name: Publish Documentation
+        uses: JamesIves/github-pages-deploy-action@v4
+        with:
+          folder: docs
+          branch: gh-pages
+      
+      # Final touches
+      - name: Replace version in package.json to be semver compatible
+        run: sed -i "s/IN-DEV/$(echo $GITHUB_REF | sed 's/refs\/tags\///')/" package.json
+      
+      # Publish to registries
+      - name: Publish package on NPM
+        run: pnpm publish . --access public --no-git-checks
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
