--- a/package.json
+++ b/package.json
@@ -1,37 +1,38 @@
 {
-  "name": "@tecsafe/app-js-sdk",
-  "version": "0.0.0",
-  "description": "Provides a Plugin to integrate the TECSAFE App into a Shopware 6 Shop.",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+	"name": "app-js-sdk",
+	"version": "IN-DEV",
+	"description": "Tecsafe App JS SDK for automated IFrame and JWT management",
+	"source": "src/index.ts",
+	"main": "dist/index.js",
+	"module": "dist/index.mjs",
+	"types": "dist/index.d.ts",
   "type": "module",
-  "scripts": {
-    "watch-module": "tsc --build --clean . && tsc --build --watch .",
-    "watch-webpack": "webpack --watch --mode=development",
-    "build": "tsc --build --clean . && tsc --build . && webpack --mode=production",
-    "lint": "tsc --noEmit",
-    "cs": "prettier --check .",
-    "format": "prettier --write ."
-  },
-  "author": "TECSAFE GmbH",
   "license": "MIT",
-  "devDependencies": {
-    "prettier": "^3.0.3",
-    "ts-loader": "^9.5.0",
-    "typescript": "^5.2.2",
-    "webpack": "^5.89.0",
-    "webpack-cli": "^5.1.4"
-  },
-  "dependencies": {
-    "jwt-decode": "^3.1.2",
-    "tiny-typed-emitter": "^2.1.0"
-  },
-  "exports": {
-    "./*": "./dist/*"
-  },
-  "typesVersions": {
-    "*": {
-      "*": ["dist/*"]
+	"devDependencies": {
+		"@jest/globals": "^29.7.0",
+		"@parcel/packager-ts": "2.12.0",
+		"@parcel/transformer-typescript-types": "2.12.0",
+		"jest": "^29.7.0",
+		"parcel": "^2.12.0",
+		"prettier": "^3.3.3",
+		"ts-jest": "^29.2.5",
+		"typedoc": "^0.26.6",
+		"typescript": "^5.5.4"
+	},
+	"dependencies": {
+		"@tecsafe/jwt-sdk": "^0.1.0"
+	},
+	"scripts": {
+		"build": "parcel build",
+		"doc": "typedoc --out docs src/index.ts",
+    "test": "echo \"Error: no test specified\""
+	},
+  "targets": {
+    "main": {
+      "includeNodeModules": {
+        "jose": false
+      },
+      "optimize": true
     }
   }
 }
