--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,7 +12,7 @@
   },
   "editor.codeActionsOnSave": {
     // "source.fixAll.eslint": "explicit",
-    // "source.fixAll.stylelint": "explicit"
+    "source.fixAll.stylelint": "explicit"
   },
   "cSpell.words": [
     "OFCP",
