--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
 	"main": "dist/index.js",
 	"module": "dist/index.mjs",
 	"types": "dist/index.d.ts",
-  "type": "module",
-  "license": "MIT",
+	"type": "module",
+	"license": "MIT",
 	"devDependencies": {
 		"@jest/globals": "^29.7.0",
 		"@parcel/packager-ts": "2.12.0",
@@ -20,21 +20,22 @@
 		"typescript": "^5.5.4"
 	},
 	"dependencies": {
-		"@tecsafe/jwt-sdk": "^0.1.1"
+		"@tecsafe/jwt-sdk": "^0.1.2"
 	},
 	"scripts": {
 		"build": "parcel build",
 		"doc": "typedoc --out docs src/index.ts",
-    "test": "echo \"Error: no test specified\"",
-    "lint": "prettier src/* --check",
-    "lint:fix": "prettier src/* --write"
+		"test": "echo \"Error: no test specified\"",
+		"lint": "prettier src/* --check",
+		"lint:fix": "prettier src/* --write"
 	},
-  "targets": {
-    "main": {
-      "includeNodeModules": {
-        "jose": false
-      },
-      "optimize": true
-    }
+	"targets": {
+		"main": {
+			"includeNodeModules": true,
+			"optimize": true
+		}
+	},
+  "alias": {
+    "jose": false
   }
 }
