added: ping, pong and update-full-screen-url messages

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -43,7 +43,10 @@ jobs:
       # Final touches
       - name: Replace version in package.json to be semver compatible
         run: sed -i "s/IN-DEV/$(echo $GITHUB_REF | sed 's/refs\/tags\///')/" package.json
-      
+
+      - name: Replace version in Version.ts to be the same as package.json
+        run: sed -i "s/IN-DEV/$(echo $GITHUB_REF | sed 's/refs\/tags\///')/" src/util/Version.ts
+
       # Publish to registries
       - name: Publish package on NPM
         run: pnpm publish . --access public --no-git-checks
